# IC-Engine

./: .gitignore  ActionState.h  ActionStateMap.cpp  Actor.h  Animation.cpp  Animation.h  Behavior.h  Button.cpp  Button.h  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Camera.cpp  ColPair.cpp  CollisionEvent.cpp  CollisionEvent.h  Composite.cpp  Composite.h  Doxyfile  Driver.cpp  Driver.h  GameEngine2020.cpp  GameEngine2020.h  GameState.cpp  GameTransform.h  InputHandle.cpp  Level.cpp  Level.h  Makefile  MapEditorState.cpp  MapEditorState.h  MenuState.cpp  New Text Document.txt  OneWayBody.h  PhysMath.cpp  PhysMath.h  PhysicsBody.cpp  PhysicsBody.h  Player.cpp  PlayerAirborneState.cpp  (+28 more)
libraries/Linux/boost_1_74_0/bin.v2/: project-cache.jam
libraries/Windows/tileson/: tileson.hpp
logs/: benchmark_systems_debug_no_mt.txt  benchmark_systems_release_no_mt.txt  latest_benchmark_scene_vs_draw_no_mt.txt
logs/laptop/: debug_no_mt_benchmark.txt
maps/: test_output.mmp
resources/actor/dynamic/: test.json
resources/actor/static/: test.json
resources/actors/: Boop.json  Boop_Jumper.json  Goal.json  MovingPlatform.json  MovingPlatform_Falling.json  MovingPlatform_Horizontal.json  MovingPlatform_Vertical.json  Player.json
resources/maps/: 40 - Copy.mmp  gandw.mmp  newLevel_1-px.tmx  test3.tmx  testLevel.mmp  testmap.json
resources/tilesets/meta/: astronautTiles.json
src/Header_Files/: GameEngine2020.h  include.h
src/Header_Files/Actor/: Actor.h  ActorData.h  ActorEntry.h  ActorID.h  ActorPool.h  Camera.h  Player.h  TestActor.h
src/Header_Files/Ai/: BoopAI.h
src/Header_Files/Audio/: AudioEngine.h  AudioManager.h  AudioRegistry.h  Music.h  Sound.h
src/Header_Files/Behavior/: ActionStateMap.h  Actor.h  Animator.h  Behavior.h  GameTransform.h  PhysEventHandler.h  PlayerAirborneState.h  PlayerIdleState.h  PlayerJumpState.h  PlayerRunState.h
src/Header_Files/Behavior/ActionState/: ActionState.h  ActionStateMap.h  PlayerAirborneState.h  PlayerIdleState.h  PlayerJumpState.h  PlayerMoveState.h  PlayerRunState.h
src/Header_Files/Component/: Component.h  ComponentFactory.h  ComponentManager.h  ComponentPool.h  Components.h  RenderComponent.h  RenderVertices.h
src/Header_Files/Event/: EventBus.h  InputEventBus.h
src/Header_Files/GUI/: Button.h  EventListener.h  MenuButton.h  Widget.h
src/Header_Files/Graphics/: Animation.h  Camera.h  DrawableObjTree.h  DrawableObject.h  DrawableVertices.h  GfxTest.h  Image.h  Parallax.h  RenderComponent.h  RenderComponentEvent.h  RenderEvent.h  Renderer.h  Texture.h
src/Header_Files/ImGui/: imconfig.h
src/Header_Files/Input/: GameInput.h  Input.h  InputDevice.h  InputEvent.h  Port.h
src/Header_Files/Level/: ActorData.h  ActorType.h  ActorUID.h  ActorUIDtest.h  Animation.h  Level.h  Scene.h
src/Header_Files/Map/: MapParser.h
src/Header_Files/Menu/: GuiElement.h  MainMenu.h  MenuButton.h
src/Header_Files/Physics/: ColPair.h  CollisionEvent.h  Composite.h  PhysMath.h  PhysicsEngine.h  StaticBody.h  SweepAndPrune.h
src/Header_Files/Physics/Bodies/: PhysicsBody.h
src/Header_Files/Scene/: Layer.h  Scene.h  SceneEvent.h  SceneManagement.h  SceneView.h  SystemManager.h
src/Header_Files/Space2D/: AffineMatrix.h  AngularType.h  Dim2.h  Dimension2.h  Mat3.h  NormVec2.h  NormalizedVec2.h  Point2.h  Poly2.h  Rect2.h  S2DMacros.h  S2DMath.h  Space2D.h  Vec2.h
src/Header_Files/State/: GameState.h  MenuState.h  State.h  StateManager.h
src/Header_Files/System/: ActorCollision.h  DebugGraphics.h  GraphicsSystems.h  InputSystems.h  MapBoundCollisionEvent.h  MtSystem.h  PhysicsSystems.h  System.h  TileCollisionEvent.h
src/Header_Files/Tilemap/: Tile.h  TileRegistry.h  Tilemap.h  Tileset.h
src/Header_Files/Util/: AudioHandle.h  BenchmarkLogger.h  CommonEnum.h  GameSettings.h  IcLogger.h  Input.h  InputHandle.h  Logger.h  LoggerProvider.h  SFMLHelpers.h  Settings.h  SettingsProvider.h  StandardLogger.h  StdoutRedirect.h  Test.h  TimeStepType.h  WorkerThreadPool.h
src/Header_Files/Window/: Window.h  WindowEventListener.h
src/Source_Files/: GameEngine2020.cpp
src/Source_Files/Actor/: Actor.cpp  ActorData.cpp  ActorEntry.cpp  ActorID.cpp  ActorPool.cpp  Camera.cpp  Player.cpp
src/Source_Files/Ai/: BoopAI.cpp
src/Source_Files/Audio/: AudioEngine.cpp  AudioRegistry.cpp  Music.cpp  Sound.cpp
src/Source_Files/Behavior/: Animator.cpp  Behavior.cpp  GameTransform.cpp  PhysEventHandler.cpp  PlayerAirborneState.cpp  PlayerIdleState.cpp  PlayerJumpState.cpp  PlayerMoveState.cpp  PlayerRunState.cpp
src/Source_Files/Component/: ComponentFactory.cpp  ComponentManager.cpp  Components.cpp  RenderVertices.cpp
src/Source_Files/Event/: EventBus.cpp
src/Source_Files/GUI/: Button.cpp  MenuButton.cpp  Widget.cpp
src/Source_Files/Graphics/: Animation.cpp  Camera.cpp  DrawableObjTree.cpp  DrawableObject.cpp  DrawableVertices.cpp  Image.cpp  Parallax.cpp  RenderEvent.cpp  Renderer.cpp  Texture.cpp
src/Source_Files/Input/: Input.cpp
src/Source_Files/Level/: ActorType.cpp  ActorUID.cpp  Level.cpp
src/Source_Files/Map/: MapParser.cpp
src/Source_Files/Menu/: GuiElement.cpp  MainMenu.cpp  MenuButton.cpp
src/Source_Files/Physics/: ColPair.cpp  CollisionEvent.cpp  OneWayBody.cpp  PhysMath.cpp  PhysicsBody.cpp  PhysicsEngine.cpp  PolygonBody.cpp  RigidBody.cpp  SweepAndPrune.cpp
src/Source_Files/Scene/: Layer.cpp  Scene.cpp  SceneEvent.cpp  SceneManagement.cpp  SystemManager.cpp
src/Source_Files/Space2D/: AffineMatrix.cpp  AngularType.cpp  Dimension2.cpp  NormalizedVec2.cpp  Point2.cpp  Poly2.cpp  Rect2.cpp  Space2D.cpp  Vec2.cpp
src/Source_Files/State/: GameState.cpp  MenuState.cpp  State.cpp  StateManager.cpp
src/Source_Files/System/: MtSystem.cpp  System.cpp
src/Source_Files/Tilemap/: Tile.cpp  TileRegistry.cpp  Tilemap.cpp  Tileset.cpp
src/Source_Files/Util/: BenchmarkLogger.cpp  GameSettings.cpp  IcLogger.cpp  Input.cpp  InputHandle.cpp  Logger.cpp  LoggerProvider.cpp  SFMLHelpers.cpp  StandardLogger.cpp  Test.cpp
src/Source_Files/Window/: Window.cpp  WindowEventListener.cpp
(+63 files in other folders)
